--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
   displayName: 'npm install and build'
   
 - script: npm install -g @angular/cli  
+- script: yarn install  
   
   #Parte das Tasks
 - task: CopyFiles@2
