--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
   
 - script: npm install -g @angular/cli  
 - script: yarn install  
-- script: npm run compile
+- script: tsc --target ES6 --strict true --project tsconfigs/production.json
   
   #Parte das Tasks
 - task: CopyFiles@2
