--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,11 @@ steps:
   displayName: 'npm install and build'
   
 - script: npm install -g @angular/cli  
+  displayName: 'instalar o angular'
 - script: yarn install  
-- script: jasmine test --reporter jasmine-reporters
+  displayName: 'instalar o yarn'
+- script: npm test
+  displayName: 'executar o teste'
   
   #Parte das Tasks
 - task: CopyFiles@2
