--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,11 @@ steps:
   displayName: 'instalar o yarn'
 - script: npm test
   displayName: 'executar o teste'
-  
+- script: |
+    nyc --reporter=cobertura --reporter=html \
+    npm test -- --reporter mocha-junit-reporter --reporter-options mochaFile=./test-results.xml
+  displayName: 'Publicar dados da cobertura de código'
+
   #Parte das Tasks
 - task: CopyFiles@2
   inputs:
@@ -56,3 +60,10 @@ steps:
     testRunner: JUnit
     testResultsFiles: '**/test-results.xml'
   displayName: 'Publicação do Teste'  
+
+#Task de Publicar resultados de cobertura do Código
+- task: PublishCodeCoverageResults@1
+  inputs: 
+    codeCoverageTool: Cobertura # or JaCoCo
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'  
