--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,14 +85,7 @@ steps:
     summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/*coverage.xml'
     reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'  
 
-- task: Npm@1
+- task: ArchiveFiles@2
   inputs:
-     command: publish
-     publishRegistry: useExternalRegistry
-     publishEndpoint: https://my.npmregistry.com
-- task: Npm@1
-  inputs:
-     command: publish
-     publishRegistry: useFeed
-     publishFeed: https://my.npmregistry.com
-
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
