--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,7 @@ steps:
 - script: npm install --save-dev webpack-cli
   displayName: 'instalar o webpack-cli'
   
-#Script para instalar o leitor de JSON
-- script: npm install json-loader --save
-  displayName: 'instalar o leitor de json'
+#colocar leitor de json aqui
   
  #Script para instalar o bootstrap
 - script: npm install bootstrap@4.1.3 jquery@3.3.1 popper.js@1.14.3 --save
